--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -87,6 +87,10 @@
         width: 100%;
     }
 
+    .footer-left-container h2 {
+        font-size: 25px;
+    }
+
     form {
         width: 90%;
         margin-top: 15px;
@@ -107,8 +111,16 @@
         padding: 0;
     }
 
+    .footer-right-container h2 {
+        font-size: 25px;
+    }
+
     .outros-contatos {
         align-items: center;
+    }
+
+    .footer-whatsapp-button {
+        margin-top: 30px;
     }
 
     .creditos {
