--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -68,6 +68,10 @@
         margin-top: 30px;
     }
 
+    #servicos hr {
+        width: 50%;
+    }
+
     .servicos-card-container {
         grid-template-columns: repeat(1, 290px);
         grid-template-rows: repeat(5, 380px);
