--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,13 +1,5 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
@@ -16,15 +8,16 @@
 
     box-sizing: border-box;
 
-    /*font-family: 'Poppins', sans-serif;*/
-    /*font-family: 'Roboto Flex', sans-serif;*/
-    /*font-family: 'Tinos', sans-serif;*/
-    /*font-family: 'Montserrat', sans-serif;*/
     font-family: 'Inter', sans-serif;
 }
 
 html, body {
     scroll-behavior: smooth;
+
+    width: 100%;
+    max-width: 2000px;
+    margin: auto;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.348);
 }
 
 header {
