--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,6 +20,19 @@ html, body {
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.348);
 }
 
+.fade-in {
+    animation: fadeIn 1s ease-in forwards;
+}
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+}
+
 header {
     height: 70px;
     width: 100%;
