--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -262,6 +262,7 @@ html, body {
     gap: 20px;
 
     position: relative;
+    z-index: 0;
 
     background-color: #FFF;
     border: 2px solid #295773;
@@ -304,14 +305,14 @@ html, body {
 
 .card-full-content {
     display: none;
-    z-index: 1000;
+    
 }
 
 .servicos-card.open .card-full-content {
     display: block;
     position: absolute;
     top: 210px;
-    z-index: 2000;
+    z-index: 3000;
     border: 1px solid #21475e;
     box-shadow: -10px 5px 5px rgba(0, 0, 0, 0.356);
 
@@ -397,6 +398,10 @@ input, textarea {
     border: 1px solid #A6B0AB;
     border-radius: 6px;
     font-size: 13px;
+}
+
+textarea {
+    resize: none;
 }
 
 button {
